--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
   "public": true,
   "cleanUrls": true,
   "trailingSlash": false,
+  "comment": "Force deploy: 2025-11-12T19:30:00Z",
   "rewrites": [
     {
       "source": "/(.*)",
