--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,15 @@
   ],
   "headers": [
     {
+      "source": "/css/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         {
