--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "public": true,
   "cleanUrls": true,
   "trailingSlash": false,
-  "comment": "Force deploy: 2025-11-12T19:30:00Z",
+  "comment": "Force deploy: 2025-11-12T20:15:00Z - CSS cache fix",
   "rewrites": [
     {
       "source": "/(.*)",
